frontend/src/components/footer/Footer.css
.footer_container {
  display: flex;
  justify-content: space-around;
  background-color: var(--color-header-footer);
  padding: 25px 0;
  margin-top: auto;
  width: 100%;
}

.tos_links {
  display: flex;
  justify-content: center;
  gap: var(--spacing-md);
}

.footer_nav_link {
  color: var(--color-text-dark);
  transition: color 0.3s ease;
}

.footer_nav_link:hover {
  color: var(--color-primary);
}

.footer_nav_link.active {
  color: var(--color-primary);
  font-weight: var(--font-weight-bold);
}

